feat: 增加创建用户关系接口；调整id生成Utils
